--- a/home-manager/hyprland/hyprland.conf
+++ b/home-manager/hyprland/hyprland.conf
@@ -18,7 +18,7 @@ monitor=DVI-D-1, 1920x1080@120,1200x500,1
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
-env = XCURSOR_SIZE,24
+# env = XCURSOR_SIZE,24
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -28,7 +28,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 2 
 
     touchpad {
         natural_scroll = no
@@ -128,7 +128,6 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
@@ -175,5 +174,8 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 #rofi keybind
-bind = $mainMod, S, exec, rofi -show drun -show-icons
+bind = $mainMod, R, exec, rofi -show drun -show-icons
+
+# leave menu waybar/rofi bind
+bind = $mainMod, L, exec, bash $HOME/.config/rofi/leave/leave.sh
 exec-once=bash ~/.config/hypr/start.sh
