--- a/home-manager/waybar/config
+++ b/home-manager/waybar/config
@@ -1,103 +1,119 @@
 {
 	"layer": "top",
-	"modules-left": ["custom/launcher","cpu","memory","custom/media","tray"],
-	"modules-center": ["hyprland/workspaces"],
-	"modules-right": ["custom/updates","custom/wallpaper","network","pulseaudio","clock","custom/power"],
-	
+	"modules-left": [
+		"custom/launcher",
+		"cpu",
+		"memory",
+		"custom/media",
+		"tray"
+	],
+	"modules-center": [
+		"hyprland/workspaces"
+	],
+	"modules-right": [
+		"custom/updates",
+		"custom/wallpaper",
+		"network",
+		"pulseaudio",
+		"clock",
+		"custom/power"
+	],
 	"pulseaudio": {
 		"tooltip": false,
 		"scroll-step": 5,
 		"format": "{icon} {volume}%",
 		"format-muted": "󰝟  {volume}%",
-		"on-click":"amixer set Master toggle",
+		"on-click": "amixer set Master toggle",
 		"format-icons": {
-			"default": [" ", " ", " "]
+			"default": [
+				" ",
+				" ",
+				" "
+			]
 		}
 	},
-
-      "hyprland/workspaces": {
-        "active-only": "false",
-	"all-outputs": "true",
-	"on-click": "activate",
-     	"format":" {icon} ",
-	"format-icons": {
-	"1": "",
-	"2": "",
-	"3": "",
-	"4": "",
-	"5": "",
-	"6": "",
+	"hyprland/workspaces": {
+		"active-only": "false",
+		"all-outputs": "true",
+		"on-click": "activate",
+		"format": " {icon} ",
+		"format-icons": {
+			"1": "",
+			"2": "",
+			"3": "",
+			"4": "",
+			"5": "",
+			"6": ""
+		}
 	},
-      },
 	"network": {
 		"tooltip": false,
 		"format-wifi": "  {essid}",
 		"format-ethernet": "󰱔 {ipaddr}/{cidr}"
 	},
-	"tray":{
-		"icon-size":18,
+	"tray": {
+		"icon-size": 18,
 		"spacing": 10
 	},
-    "clock": {
-       "format": "{:%Y-%m-%d %H:%M}",
-       "tooltip-format": "<tt><small>{calendar}</small></tt>",
-	"calendar": {
-		"mode"          : "year",
-		"mode-mon-col"  : 3,
-		"weeks-pos"     : "right",
-		"on-scroll"     : 1,
-		"on-click-right": "mode",
-		"format": {
-			"months":     "<span color='#ffead3'><b>{}</b></span>",
-			"days":       "<span color='#ecc6d9'><b>{}</b></span>",
-			"weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
-			"weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
-			"today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+	"clock": {
+		"format": "{:%Y-%m-%d %H:%M}",
+		"tooltip-format": "<tt><small>{calendar}</small></tt>",
+		"calendar": {
+			"mode": "year",
+			"mode-mon-col": 3,
+			"weeks-pos": "right",
+			"on-scroll": 1,
+			"on-click-right": "mode",
+			"format": {
+				"months": "<span color='#ffead3'><b>{}</b></span>",
+				"days": "<span color='#ecc6d9'><b>{}</b></span>",
+				"weeks": "<span color='#99ffdd'><b>W{}</b></span>",
+				"weekdays": "<span color='#ffcc66'><b>{}</b></span>",
+				"today": "<span color='#ff6699'><b><u>{}</u></b></span>"
+			}
+		},
+		"actions": {
+			"on-click-right": "mode",
+			"on-click-forward": "tz_up",
+			"on-click-backward": "tz_down",
+			"on-scroll-up": "shift_up",
+			"on-scroll-down": "shift_down"
 		}
 	},
-	"actions": {
-		"on-click-right": "mode",
-		"on-click-forward": "tz_up",
-		"on-click-backward": "tz_down",
-		"on-scroll-up": "shift_up",
-		"on-scroll-down": "shift_down"
+	"cpu": {
+		"interval": 15,
+		"format": " {}%",
+		"max-length": 10
+	},
+	"memory": {
+		"interval": 30,
+		"format": " {}%",
+		"max-length": 10
+	},
+	"custom/media": {
+		"interval": 30,
+		"format": "{icon} {}",
+		"return-type": "json",
+		"max-length": 20,
+		"format-icons": {
+			"spotify": " ",
+			"default": " "
+		},
+		"escape": true,
+		"exec": "$HOME/.config/system_scripts/mediaplayer.py 2> /dev/null",
+		"on-click": "playerctl play-pause"
+	},
+	"custom/launcher": {
+		"format": " ",
+		"on-click": "rofi -show drun -show-icons",
+		"on-click-right": "killall rofi"
+	},
+	"custom/power": {
+		"format": " ",
+		"on-click": "bash ~/.config/rofi/leave/leave.sh"
+	},
+	"custom/wallpaper": {
+		"format": " ",
+		"on-click": "bash ~/.config/system_scripts/pkill_bc"
 	}
-   },
-    },
-    "cpu": {
-        "interval": 15,
-        "format": " {}%",
-        "max-length": 10
-    },
-    "memory": {
-        "interval": 30,
-        "format": " {}%",
-        "max-length": 10
-    },
-    "custom/media": {
-        "interval": 30,
-        "format": "{icon} {}",
-        "return-type": "json",
-        "max-length": 20,
-        "format-icons": {
-            "spotify": " ",
-            "default": " "
-        },
-        "escape": true,
-        "exec": "$HOME/.config/system_scripts/mediaplayer.py 2> /dev/null",
-        "on-click": "playerctl play-pause"
-    },
-    "custom/launcher":{
-        "format": " ",
-        "on-click": "rofi -show drun -show-icons",
-        "on-click-right": "killall rofi"
-    },
-    "custom/power":{
-        "format": " ",
-        "on-click": "bash ~/.config/rofi/leave/leave.sh",
-    },
-    "custom/wallpaper":{
-        "format":" ",
-        "on-click": "bash ~/.config/system_scripts/pkill_bc"
-    }
 }
