--- a/home-manager/hyprland/hyprland.conf
+++ b/home-manager/hyprland/hyprland.conf
@@ -132,10 +132,10 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -177,5 +177,5 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = $mainMod, R, exec, rofi -show drun -show-icons
 
 # leave menu waybar/rofi bind
-bind = $mainMod, L, exec, bash $HOME/.config/rofi/leave/leave.sh
-exec-once=bash ~/.config/hypr/start.sh
+bind = $mainMod, L, exec, bash $XDG_CONFIG_HOME/rofi/leave/leave.sh
+exec-once=bash $XDG_CONFIG_HOME/hypr/start.sh
