Update Firefox configuration with additional extensions and policies

--- a/home-manager/hyprland/hyprland.conf
+++ b/home-manager/hyprland/hyprland.conf
@@ -103,6 +103,8 @@ gestures {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+    mouse_move_enables_dpms=true
+    key_press_enables_dpms=true
 }
 
 # Example per-device config
@@ -129,13 +131,13 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, G, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -177,5 +179,5 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = $mainMod, R, exec, rofi -show drun -show-icons
 
 # leave menu waybar/rofi bind
-bind = $mainMod, L, exec, bash $XDG_CONFIG_HOME/rofi/leave/leave.sh
+bind = $mainMod, N, exec, bash $XDG_CONFIG_HOME/rofi/leave/leave.sh
 exec-once=bash $XDG_CONFIG_HOME/hypr/start.sh
