HUGE update. Not enough time to commit each change

--- a/home-manager/hyprland/hyprland.conf
+++ b/home-manager/hyprland/hyprland.conf
@@ -85,14 +85,15 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for moreR
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
 }
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_status = inherit
+    no_gaps_when_only = 1
 }
 
 gestures {
@@ -165,7 +166,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod SHIFT, D, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -178,6 +179,16 @@ bindm = $mainMod, mouse:273, resizewindow
 #rofi keybind
 bind = $mainMod, R, exec, rofi -show drun -show-icons
 
+# bind volume keys
+bindel =, XF86AudioRaiseVolume, exec, amixer -q set Master 5%+
+bindel =, XF86AudioLowerVolume, exec, amixer -q set Master 5%-
+bindel =, XF86AudioMute, exec, amixer -q set Master toggle
+
+
 # leave menu waybar/rofi bind
 bind = $mainMod, N, exec, bash $XDG_CONFIG_HOME/rofi/leave/leave.sh
+bind = $mainMod SHIFT, Print, exec, $XDG_CONFIG_HOME/hypr/screenshot.sh selection
+bind = $mainMod, Print, exec, $XDG_CONFIG_HOME/hypr/screenshot.sh window
+bind = , Print, exec, $XDG_CONFIG_HOME/hypr/screenshot.sh all
 exec-once=bash $XDG_CONFIG_HOME/hypr/start.sh
+
