--- a/home-manager/waybar/config
+++ b/home-manager/waybar/config
@@ -5,24 +5,25 @@
 		"cpu",
 		"memory",
 		"custom/media",
-		"tray"
+		"tray",
+		"custom/playerlabel"
 	],
 	"modules-center": [
 		"hyprland/workspaces"
 	],
 	"modules-right": [
-		"custom/updates",
 		"custom/wallpaper",
 		"network",
 		"pulseaudio",
 		"clock",
-		"custom/power"
+		"custom/power",
+		"custom/notification"
 	],
 	"pulseaudio": {
 		"tooltip": false,
 		"scroll-step": 5,
 		"format": "{icon} {volume}%",
-		"format-muted": "󰝟  {volume}%",
+		"format-muted": "󰝟 {volume}%",
 		"on-click": "amixer set Master toggle",
 		"format-icons": {
 			"default": [
@@ -65,11 +66,11 @@
 			"on-scroll": 1,
 			"on-click-right": "mode",
 			"format": {
-				"months": "<span color='#ffead3'><b>{}</b></span>",
-				"days": "<span color='#ecc6d9'><b>{}</b></span>",
-				"weeks": "<span color='#99ffdd'><b>W{}</b></span>",
-				"weekdays": "<span color='#ffcc66'><b>{}</b></span>",
-				"today": "<span color='#ff6699'><b><u>{}</u></b></span>"
+				"months": "<span color='#ffead3' ><b>{}</b></span>",
+				"days": "<span color='#e9c9d9' ><b>{}</b></span>",
+				"weeks": "<span color='#99ffdd' ><b>W{}</b></span>",
+				"weekdays": "<span color='#ffcc66' ><b>{}</b></span>",
+				"today": "<span color='#ff6699' ><b><u>{}</u></b></span>"
 			}
 		},
 		"actions": {
@@ -104,16 +105,42 @@
 		"on-click": "playerctl play-pause"
 	},
 	"custom/launcher": {
+		"tooltip": false,
 		"format": " ",
-		"on-click": "rofi -show drun -show-icons",
-		"on-click-right": "killall rofi"
+		"on-click": "rofi -show drun -theme $XDG_CONFIG_HOME/rofi/themes/fancy.rasi",
+		"on-click-right": "pkill rofi"
 	},
 	"custom/power": {
+		"tooltip": false,
 		"format": " ",
 		"on-click": "bash $XDG_CONFIG_HOME/rofi/leave/leave.sh"
 	},
 	"custom/wallpaper": {
 		"format": " ",
+		"tooltip": false,
 		"on-click": "bash $XDG_CONFIG_HOME/system_scripts/pkill_bc"
+	},
+	"custom/notification": {
+		"tooltip": false,
+		"format": "{icon}",
+		"format-icons": {
+			"notification": "<span foreground='red' ><small><sup>⬤</sup></small></span>",
+			"none": " ",
+			"dnd-notification": "<span foreground='red' ><small><sup>⬤</sup></small></span>",
+			"dnd-none": " "
+		},
+		"return-type": "json",
+		"exec-if": "which swaync-client",
+		"exec": "swaync-client -swb",
+		"on-click": "sleep 0.1 && swaync-client -t -sw",
+		"on-click-right": "sleep 0.1 && swaync-client -d -sw",
+		"escape": true
+	},
+	"custom/playerlabel": {
+		"format": "<span>󰎈 {} 󰎈</span>",
+		"return-type": "json",
+		"max-length": 40,
+		"exec": "playerctl -a metadata --format '{\"text\": \"{{artist}} - {{markup_escape(title)}}\", \"tooltip\": \"{{playerName}} : {{markup_escape(title)}}\", \"alt\": \"{{status}}\", \"class\": \"{{status}}\"}' -F",
+		"on-click": ""
 	}
 }
